--- a/public/assets/css/custom.css
+++ b/public/assets/css/custom.css
@@ -129,6 +129,15 @@ button.btn:hover {
     color: #fff;
 }
 
+a:not(.btn):hover, a:not(.btn):focus, a:not(.btn):active {    
+    color: #26B8F3;
+}
+a.btn:not([href]):not([tabindex]):hover, a.btn:not([href]):not([tabindex]):focus, a.btn:not([href]):not([tabindex]):not(:disabled):not(.disabled):active, a.btn:not([href]):not([tabindex]):not(:disabled):not(.disabled).active, .btn:hover, .btn:focus, .btn:not(:disabled):not(.disabled):active, .btn:not(:disabled):not(.disabled).active {
+    background-color: #26B8F3;
+    border-color: #26B8F3;
+    color: #fff;
+}
+
 .form-control:focus, input:focus, select:focus {
     border-color: #26B8F3;
 }
