--- a/public/assets/admin/css/custom.css
+++ b/public/assets/admin/css/custom.css
@@ -27,7 +27,9 @@ table th, table.dataTable thead .sorting, table.dataTable thead .sorting_desc, t
 .hidden-input-club,
 .hidden-input-sponsor,
 .hidden-input-user,
-.hidden-input-newsletter
+.hidden-input-newsletter,
+.hidden-input-organiser,
+.hidden-date-range
 {
     display: none;
 }
