--- a/public/assets/admin/css/custom.css
+++ b/public/assets/admin/css/custom.css
@@ -64,3 +64,7 @@ h3.popover-title { color: #333;}
 .tags a.badge:hover {
     background: #666;
 }
+
+.label-secondary {
+    background-color: #36c6d3;
+}
