few import fixes

--- a/public/assets/admin/css/custom.css
+++ b/public/assets/admin/css/custom.css
@@ -68,3 +68,6 @@ h3.popover-title { color: #333;}
 .label-secondary {
     background-color: #36c6d3;
 }
+.label-dark {
+    background-color: #333;
+}
