Admin dashboard updates

--- a/public/assets/admin/css/custom.css
+++ b/public/assets/admin/css/custom.css
@@ -71,3 +71,7 @@ h3.popover-title { color: #333;}
 .label-dark {
     background-color: #333;
 }
+
+.dashboard-stat2 {
+    padding-bottom: 15px;
+}
