printing capability added on race listings

--- a/public/assets/css/custom.css
+++ b/public/assets/css/custom.css
@@ -1,6 +1,9 @@
 /*
     CUSTOM CSS RULES
 */
+#print-race-table {
+	display: none;
+}
 #slider .lazy {
 	background-image: none !important;
 	background-color: #f1f1fa !important;
